[package]
name = "oxytorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.7"
serde_derive = "1.0.143"
